src/tests/cases/snapshots/bandwhich__tests__cases__ui__basic_startup.snap
---
source: src/tests/cases/ui.rs
expression: terminal_draw_events.lock().unwrap().join(SNAPSHOT_SECTION_SEPARATOR)
---
 Total Up / Down: 0Bps / 0Bps                                                                                                                                                                 
┌Utilization by process name──────────────────────────────────────────────────────────────────┐┌Utilization by remote address────────────────────────────────────────────────────────────────┐
│Process                   Connections              Up / Down                                 ││Remote Address                               Connections       Up / Down                     │
│                                                                                             ││                                                                                             │
│                                                                                             ││                                                                                             │
│                                                                                             ││                                                                                             │
│                                                                                             ││                                                                                             │
│                                                                                             ││                                                                                             │
│                                                                                             ││                                                                                             │
│                                                                                             ││                                                                                             │
│                                                                                             ││                                                                                             │
│                                                                                             ││                                                                                             │
│                                                                                             ││                                                                                             │
│                                                                                             ││                                                                                             │
│                                                                                             ││                                                                                             │
│                                                                                             ││                                                                                             │
│                                                                                             ││                                                                                             │
│                                                                                             ││                                                                                             │
│                                                                                             ││                                                                                             │
│                                                                                             ││                                                                                             │
│                                                                                             ││                                                                                             │
│                                                                                             ││                                                                                             │
│                                                                                             ││                                                                                             │
│                                                                                             ││                                                                                             │
└─────────────────────────────────────────────────────────────────────────────────────────────┘└─────────────────────────────────────────────────────────────────────────────────────────────┘
┌Utilization by connection───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│Connection                                                                                                                                   Process           Up / Down                    │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
│                                                                                                                                                                                            │
└────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
 Press <SPACE> to pause. Use <TAB> to rearrange tables. (DNS queries hidden).                                                                                                                 

