src/tests/cases/snapshots/bandwhich__tests__cases__ui__full-width-under-30-height-draw_events-1.snap
---
source: src/tests/cases/ui.rs
expression: "&terminal_draw_events_mirror[1]"
---
                         98Bps                                                                                                                                                                
                                                                                                                                                                                              
                                                                                                                                                                                              
 5                           1                           0Bps / 28Bps                           3.3.3.3                                 1                     0Bps / 28Bps                    
 4                           1                           0Bps / 26Bps                           2.2.2.2                                 1                     0Bps / 26Bps                    
 1                           1                           0Bps / 22Bps                           1.1.1.1                                 1                     0Bps / 22Bps                    
 2                           1                           0Bps / 21Bps                           4.4.4.4                                 1                     0Bps / 21Bps                    
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              
                                                                                                                                                                                              

